apps/lidarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media
  labels:
    app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
      annotations:
        diun.enable: "true"
    spec:
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: download
      containers:
        - name: lidarr
          image: ghcr.io/hotio/lidarr:release-2.1.7.4030
          ports:
            - containerPort: 8686
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: downloads
              mountPath: /data
      nodeSelector:
          pvpn: "true"
      tolerations:
          - key: "network"
            operator: "Equal"
            value: "pvpn"
            effect: "NoSchedule"
