apps/lidarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-service
  namespace: media
spec:
  ports:
  - name: http
    port: 7878
    protocol: TCP
  selector:
    app: lidarr
  type: ClusterIP
